--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,11 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
+        "post-install-cmd":[
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 public/"
+        ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
